force-app/main/default/objects/Underwriter_Evaluation_History__c/Underwriter_Evaluation_History__c.object-meta.xml
<CustomObject>
    <description>This object will record history of underwriter evaluation on update.</description>
    <label>Underwriter Evaluation History</label>
    <nameField>
        <displayFormat>URH-{000}</displayFormat>
        <label>Underwriter Evaluation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Underwriter Evaluation Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>