force-app/main/default/objects/Underwriter_Evaluation_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Underwriter Evaluation Histories</relationshipLabel>
    <relationshipName>Underwriter_Evaluation_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>