force-app/main/default/objects/Underwriter_Evaluation_History__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field Name</label>
    <length>225</length>
    <type>Text</type>
</CustomField>