force-app/main/default/objects/Underwriter_Evaluation_History__c/fields/HistoryCreateDate__c.field-meta.xml
<CustomField>
    <fullName>HistoryCreateDate__c</fullName>
    <formula>DATEVALUE(CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HistoryCreateDate</label>
    <type>Date</type>
</CustomField>