force-app/main/default/objects/Underwriter_Evaluation_History__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>