force-app/main/default/objects/Underwriter_Evaluation_History__c/fields/Old_Value__c.field-meta.xml
<CustomField>
    <fullName>Old_Value__c</fullName>
    <label>Old Value</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>